WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269549
[UnifiedPDF] After resizing the window, PDF content is not centered and hit testing is offset
https://bugs.webkit.org/show_bug.cgi?id=269549
Summary
[UnifiedPDF] After resizing the window, PDF content is not centered and hit t...
Simon Fraser (smfr)
Reported
2024-02-15 22:02:35 PST
After a window resize, the PDF content is no longer centered, and hit-testing is offset.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-15 22:03:15 PST
<
rdar://problem/123066513
>
Simon Fraser (smfr)
Comment 2
2024-02-15 22:05:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24584
EWS
Comment 3
2024-02-16 11:29:24 PST
Committed
274859@main
(0626093f8437): <
https://commits.webkit.org/274859@main
> Reviewed commits have been landed. Closing PR #24584 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug