[UnifiedPDF] After resizing the window, PDF content is not centered and hit testing is offset https://bugs.webkit.org/show_bug.cgi?id=269549 rdar://123066513

Reviewed by Tim Horton.

The PDF content is centered in the window via a transform on the m_contentsLayer layer.
We need to update this transform both when the scale factor changes, but also when
layout is updated.

This is a small change to fix the issue. A larger refactoring of the "update" functions
is needed.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::updateLayerPositions):
(WebKit::UnifiedPDFPlugin::setPageScaleFactor):
(WebKit::UnifiedPDFPlugin::updateLayout):

Canonical link: https://commits.webkit.org/274859@main